# llm-io-normalizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: evaluation_pipeline.py  judge_model.py  tested_model.py
src/llm_io_normalizer/: __init__.py  errors.py  gateway.py  schemas.py
src/llm_io_normalizer/adapters/: __init__.py  openai_compatible.py
src/llm_io_normalizer/normalizers/: __init__.py  json_output.py  reasoning.py
tests/: test_gateway_fallback.py  test_gateway_stream_extraction.py  test_json_output.py  test_provider_mapping.py  test_reasoning_normalizer.py
