[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-io-normalizer"
version = "0.1.0"
description = "A lightweight Model I/O normalization layer for OpenAI-compatible LLM calls."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "llm-io-normalizer contributors"}
]
keywords = [
  "llm",
  "model-io",
  "openai-compatible",
  "reasoning",
  "streaming",
  "normalization",
  "judge-model",
  "tested-model",
  "structured-output"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/wanghesong2019/llm-io-normalizer"
Repository = "https://github.com/wanghesong2019/llm-io-normalizer"
Issues = "https://github.com/wanghesong2019/llm-io-normalizer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_io_normalizer = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
